displayed recipe by Id.